tests/reject/errorIsError.emojic
🏁 🍇
  🔤Abc, 123🔤 ➡️ a

  🍊 🚥 a 🍇
    😀 🔤error🔤❗️
  🍉
  🍓 🍇
    😀 🔤no error🔤❗️
  🍉
🍉
